--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,7 +6,6 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Description</th>
       <th colspan="4"></th>
     </tr>
   </thead>
@@ -14,13 +13,10 @@
   <tbody>
     <% @topics.each do |topic| %>
       <tr>
-        <td><%= topic.title %></td>
-        <td><%= topic.description %></td>
+        <td><%= link_to topic.title, topic %></td>
         <td><%= pluralize(topic.votes.count, "vote") %></td>
         <td><%= button_to '+1', upvote_topic_path(topic), method: :post %></td>
-        <td><%= link_to 'Show', topic %></td>
-        <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-        <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: '你确定？' } %></td>
+        <td><%= link_to '删除', topic, method: :delete, data: { confirm: '你将会失去这条Topic，很久很久。(真的很久！)' } %></td>
       </tr>
     <% end %>
   </tbody>
